# interview-assisst

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  commands.txt  env_example.txt  pyproject.toml  requirements.txt  run_app.py  test_difficulty.py  test_simplified_generator.py
docs/: README.md
src/interview_assistant/: __init__.py  main.py
src/interview_assistant/core/: __init__.py  question_generator.py  resume_parser.py
src/interview_assistant/ui/: __init__.py  streamlit_app.py
src/interview_assistant/utils/: __init__.py  helpers.py
tests/: __init__.py  test_core.py
